WebKit/WebView/WebHTMLView.mm
@@ -1803,6 +1803,15 @@ static NSURL* uniqueURLWithRelativePart(NSString *relativePart)
         page->dragController()->setDraggingImageURL(KURL());
 }
 
+- (BOOL)_hasHTMLDocument
+{
+    Frame* coreFrame = core([self _frame]);
+    if (!coreFrame)
+        return NO;
+    Document* document = coreFrame->document();
+    return document && document->isHTMLDocument();
+}
+
 - (DOMDocumentFragment *)_documentFragmentFromPasteboard:(NSPasteboard *)pasteboard
                                                  forType:(NSString *)pboardType
                                                inContext:(DOMRange *)context
@@ -1832,7 +1841,11 @@ static NSURL* uniqueURLWithRelativePart(NSString *relativePart)
         
         return [[self _bridge] documentFragmentWithMarkupString:HTMLString baseURLString:nil];
     }
-    if (pboardType == NSRTFPboardType || pboardType == NSRTFDPboardType) {
+
+    // The _hasHTMLDocument clause here is a workaround for a bug in NSAttributedString: Radar 5052369.
+    // If we call _documentFromRange on an XML document we'll get "setInnerHTML: method not found".
+    // FIXME: Remove this once bug 5052369 is fixed.
+    if ([self _hasHTMLDocument] && pboardType == NSRTFPboardType || pboardType == NSRTFDPboardType) {
         NSAttributedString *string = nil;
         if (pboardType == NSRTFDPboardType)
             string = [[NSAttributedString alloc] initWithRTFD:[pasteboard dataForType:NSRTFDPboardType] documentAttributes:NULL];
